--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,12 +42,13 @@ jobs:
           START_TIME=$(date +%s)
 
           docker buildx build \
-            --file BlindTreasure.API/Dockerfile \
+            --file BlindTreasure.API/Dockerfile \  # Đường dẫn đúng đến Dockerfile
             --tag ${{ secrets.DOCKERHUB_USERNAME }}/blindtreasure-api:latest \
             --cache-from type=local,src=/tmp/.buildx-cache \
             --cache-to type=local,dest=/tmp/.buildx-cache-new \
             --push \
-            .
+            ./BlindTreasure.API  # Đường dẫn đến thư mục chứa Dockerfile
+         
 
           END_TIME=$(date +%s)
           BUILD_DURATION=$((END_TIME - START_TIME))
