--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,34 +26,26 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Log build start time
-        run: |
-          echo "Build start: $(date +'%Y-%m-%d %H:%M:%S')"
+        run: echo "Build start: $(date +'%Y-%m-%d %H:%M:%S')"
 
-      # Bước 4: Đăng nhập DockerHub
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Bước 5: Build & Push Docker Image
       - name: Build & Push Docker image
         run: |
           START_TIME=$(date +%s)
           docker buildx build \
             --file BlindTreasure.API/Dockerfile \
-            --tag ${{ secrets.DOCKERHUB_USERNAME }}/blindtreasureapi:latest \
+            --tag ${{ secrets.DOCKERHUB_USERNAME }}/blindtreasure-api:latest \
             --cache-from type=local,src=/tmp/.buildx-cache \
             --cache-to type=local,dest=/tmp/.buildx-cache-new \
             --push \
-            ./BlindTreasure.API  # Đảm bảo context là thư mục chứa Dockerfile
-
-            ./BlindTreasure.API  # Đường dẫn đến thư mục chứa Dockerfile
-         
-
+            BlindTreasure.API
           END_TIME=$(date +%s)
-          BUILD_DURATION=$((END_TIME - START_TIME))
-          echo "Build & Push completed in $BUILD_DURATION seconds."
+          echo "Build & Push completed in $((END_TIME - START_TIME)) seconds."
 
       - name: Move Docker layer cache
         run: |
