--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,7 +26,8 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Log build start time
-        run: echo "Build start: $(date +'%Y-%m-%d %H:%M:%S')"
+        run: |
+          echo "Build start: $(date +'%Y-%m-%d %H:%M:%S')"
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
