--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,13 +24,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.ref }}-${{ github.sha }}
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-
-      - name: Log build start time
-        run: |
-          echo "Build start: $(date +'%Y-%m-%d %H:%M:%S')"
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -40,6 +36,7 @@ jobs:
 
       - name: Build & Push Docker image
         run: |
+          echo "Build start: $(date +'%Y-%m-%d %H:%M:%S')"
           START_TIME=$(date +%s)
 
           docker buildx build \
