--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,9 +14,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up QEMU (for multi-arch)
-        uses: docker/setup-qemu-action@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -28,29 +25,35 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Log build start time
+        run: |
+          echo "Build start: $(date +'%Y-%m-%d %H:%M:%S')"
+
+      # Bước 4: Đăng nhập DockerHub
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # Bước 5: Build & Push Docker Image
       - name: Build & Push Docker image
         run: |
-          echo "Build start: $(date +'%Y-%m-%d %H:%M:%S')"
           START_TIME=$(date +%s)
 
           docker buildx build \
-            --file ./BlindTreasure.API/Dockerfile \
+            --file BlindTreasure.API/Dockerfile \
             --tag ${{ secrets.DOCKERHUB_USERNAME }}/blindtreasure-api:latest \
             --cache-from type=local,src=/tmp/.buildx-cache \
-            --cache-to type=local,dest=/tmp/.buildx-cache-new,mode=max \
+            --cache-to type=local,dest=/tmp/.buildx-cache-new \
             --push \
             .
 
           END_TIME=$(date +%s)
-          echo "Build & Push completed in $((END_TIME - START_TIME)) seconds."
+          BUILD_DURATION=$((END_TIME - START_TIME))
+          echo "Build & Push completed in $BUILD_DURATION seconds."
 
-      - name: Save new cache
+      - name: Move Docker layer cache
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
