--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to VPS
 
 on:
   workflow_run:
-    workflows: ["Build Docker Image"] 
+    workflows: ["Build and Push Docker Image"] 
     types:
       - completed
 
