--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,47 +1,40 @@
-name: Build and Push Docker Image
+name: Docker Build and Push
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Khi có code mới được push lên nhánh main thì workflow này sẽ chạy
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-and-push:
+    runs-on: ubuntu-latest  # Máy chủ ảo mà GitHub cung cấp để chạy pipeline
 
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Lấy code từ GitHub repository về
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v3  # Thiết lập công cụ Buildx của Docker để build hiệu quả hơn
 
-      - name: Log in to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}  # Đăng nhập Docker Hub bằng secret
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Restore build cache
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-blindtreasure
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Build and Push image
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: BlindTreasure.API/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/blindtreasure-api:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+          context: .  # Thư mục chứa Dockerfile và mã nguồn
+          file: BlindTreasure.API/Dockerfile  # Vị trí file Dockerfile
+          push: true  # Sau khi build xong thì đẩy (push) lên Docker Hub
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/blindtreasureapi:latest  # Gán tag cho image
+          cache-from: type=gha  # Dùng cache từ GitHub Actions
+          cache-to: type=gha,mode=max  # Tối đa hóa cache để dùng lại lần sau
 
-      - name: Replace old cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+      - name: Trigger Deployment
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          event-type: deploy-blindtreasure  # Gửi tín hiệu gọi workflow deploy sau khi build thành công
