--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Trigger Deployment
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          event-type: deploy-blindtreasure  # Gửi tín hiệu gọi workflow deploy sau khi build thành công
+          token: ${{ secrets.GITHUB_TOKEN }}            # OK: dùng token mặc định
+          repository: BlindTreasure/BlindTreasure.API   # OK: repo hiện tại
+          event-type: deploy-blindtreasure              # OK: khớp với tên sự kiện trong deploy.yml
