--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           host: ${{ secrets.VPS_HOST }}  # IP hoặc domain của VPS (khai báo trong repo secret)
           username: ${{ secrets.VPS_USER }}  # Tên user đăng nhập (thường là root)
-          key: ${{ secrets.VPS_PRIVATE_KEY }}  # SSH private key để đăng nhập
+          key: ${{ secrets.VPS_PASSWORD }}  # SSH password để đăng nhập
 
           script: |
             cd /root/projects/blindtreasure  # Di chuyển đến thư mục chứa file docker-compose.yml trên VPS
