--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       - JWT__Audience=BlindTreasure_Audience
       - RESEND_APITOKEN=re_gQNBXJvY_ANFdgQphKQBxdW5DNf2UG6Zk
       - RESEND_FROM=noreply@ae-tao-fullstack-api.site
+      - "MINIO_ENDPOINT=minio.ae-tao-fullstack-api.site:9000"
+      - "MINIO_ACCESS_KEY=103.211.201.162"
+      - "MINIO_SECRET_KEY=Ccubin2003@"
     ports:
       - "5000:5000"
 
