--- a/BlindTreasure.API/appsettings.json
+++ b/BlindTreasure.API/appsettings.json
@@ -3,9 +3,10 @@
     "Url": "http://localhost:4040"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=103.211.201.162;Port=5433;Database=BlindTreasureDB;Username=postgres;Password=postgres",
+    "DefaultConnection": "Host=103.211.201.162;Port=5433;Database=BlindTreasureDB;Username=postgres;Password=postgres;Timeout=300;CommandTimeout=300",
     "Redis": "redis:6379,abortConnect=false"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
