--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         condition: service_healthy
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Host=103.211.201.162;Port=5433;Database=BlindTreasureDB;Username=postgres;Password=postgres
+      - ConnectionStrings__DefaultConnection=Host=103.211.201.162;Port=5433;Database=BlindTreasureDB;Username=postgres;Password=postgres;Timeout=300;CommandTimeout=300
       - ConnectionStrings__Redis=redis:6379,abortConnect=false
       - JWT__SecretKey=BlindTreasure_SECRETKEY_SIEUCAPBAOMAT_VAYMACHUADU16KYTU
       - JWT__Issuer=BlindTreasure_Issuer
