--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - JWT__Audience=BlindTreasure_Audience
       - RESEND_APITOKEN=re_gQNBXJvY_ANFdgQphKQBxdW5DNf2UG6Zk
       - RESEND_FROM=noreply@fpt-devteam.fun
-      - "MINIO_ENDPOINT=minio.ae-tao-fullstack-api.site:9000"
+      - "MINIO_ENDPOINT=minio.fpt-devteam.fun"
       - "MINIO_ACCESS_KEY=103.211.201.162"
       - "MINIO_SECRET_KEY=Ccubin2003@"
     ports:
