initial AI models

--- a/BlindTreasure.Application/BlindTreasure.Application.csproj
+++ b/BlindTreasure.Application/BlindTreasure.Application.csproj
@@ -11,9 +11,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Betalgo.OpenAI" Version="8.7.2"/>
         <PackageReference Include="Google.Apis.Auth" Version="1.69.0"/>
         <PackageReference Include="Minio" Version="6.0.4"/>
         <PackageReference Include="Resend" Version="0.1.1"/>
+        <PackageReference Include="RestSharp" Version="112.1.0"/>
+        <PackageReference Include="System.Text.Json" Version="9.0.5"/>
     </ItemGroup>
 
 </Project>
