test Gemini baby

--- a/BlindTreasure.API/appsettings.Development.json
+++ b/BlindTreasure.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Gemini": {
+    "ApiKey": "AIzaSyB2i2jJmpwoUvXboy5N1DLQ91ORTw6cgmQ"
   }
 }
