--- a/BlindTreasure.Application/BlindTreasure.Application.csproj
+++ b/BlindTreasure.Application/BlindTreasure.Application.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Minio" Version="6.0.4" />
         <PackageReference Include="Resend" Version="0.1.1" />
         <PackageReference Include="RestSharp" Version="112.1.0" />
+        <PackageReference Include="Stripe.net" Version="48.2.0" />
         <PackageReference Include="System.Text.Json" Version="9.0.5" />
     </ItemGroup>
 
