author customer handler ghtk

--- a/BlindTreasure.API/appsettings.Development.json
+++ b/BlindTreasure.API/appsettings.Development.json
@@ -7,5 +7,7 @@
   },
   "Gemini": {
     "ApiKey": "AIzaSyB2i2jJmpwoUvXboy5N1DLQ91ORTw6cgmQ"
-  }
+  },
+  "IssuerSigningKey": "olcjcHn1cJGjewCTy1rRDFOak88VZzbi"
+
 }
