50% implement and run successfully

--- a/BlindTreasure.API/appsettings.Development.json
+++ b/BlindTreasure.API/appsettings.Development.json
@@ -8,6 +8,11 @@
   "Gemini": {
     "ApiKey": "AIzaSyB2i2jJmpwoUvXboy5N1DLQ91ORTw6cgmQ"
   },
-  "IssuerSigningKey": "olcjcHn1cJGjewCTy1rRDFOak88VZzbi"
+  "IssuerSigningKey": "olcjcHn1cJGjewCTy1rRDFOak88VZzbi",
+  "GHTK": {
+    "BaseUrl": "https://services-staging.ghtklab.com",
+    "ApiToken": "9EG5aMwxusUsDJdmKTAJqQ57XqAeaAzNE2MRqf",
+    "PartnerCode": "S22454193"
+  }
 
 }
