--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,10 +23,10 @@ jobs:
       run: dotnet restore BlindTreasure.API.sln
       
     - name: Build
-      run: dotnet build --no-restore --configuration Release
+      run: dotnet build BlindTreasure.API.sln --no-restore --configuration Release
       
     - name: Run unit tests
-      run: dotnet test --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
+      run: dotnet test BlindTreasure.API.sln --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
       
     - name: Upload test results
       uses: actions/upload-artifact@v4
