--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -26,11 +26,72 @@ jobs:
       run: dotnet build BlindTreasure.API.sln --no-restore --configuration Release
       
     - name: Run unit tests
-      run: dotnet test BlindTreasure.API.sln --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
+      run: |
+        dotnet test BlindTreasure.API.sln \
+          --no-build \
+          --configuration Release \
+          --verbosity normal \
+          --collect:"XPlat Code Coverage" \
+          --results-directory ./TestResults/ \
+          --logger "trx;LogFileName=test-results.trx"
       
+    - name: Install ReportGenerator
+      run: dotnet tool install -g dotnet-reportgenerator-globaltool
+      
+    - name: Generate coverage report
+      run: |
+        reportgenerator \
+          -reports:"./TestResults/**/coverage.cobertura.xml" \
+          -targetdir:"./coveragereport" \
+          -reporttypes:"Html;Badges;TextSummary;JsonSummary"
+      
+    - name: Display coverage summary
+      run: |
+        echo "## Code Coverage Summary" >> $GITHUB_STEP_SUMMARY
+        cat ./coveragereport/Summary.txt >> $GITHUB_STEP_SUMMARY
+      
+    - name: Comment coverage on PR
+      if: github.event_name == 'pull_request'
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        recreate: true
+        header: coverage-report
+        message: |
+          ## 📊 Code Coverage Report
+          
+          ```
+          $(cat ./coveragereport/Summary.txt)
+          ```
+          
+          📋 [Detailed HTML Report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) available in artifacts.
+      
+    - name: Upload coverage reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: coverage-report
+        path: |
+          ./coveragereport/**/*
+          
     - name: Upload test results
       uses: actions/upload-artifact@v4
       if: always()
       with:
         name: test-results
-        path: '**/TestResults/**/*'
+        path: |
+          ./TestResults/**/*
+          
+    - name: Check coverage threshold
+      run: |
+        COVERAGE=$(grep -o 'Line coverage: [0-9]*\.*[0-9]*%' ./coveragereport/Summary.txt | grep -o '[0-9]*\.*[0-9]*')
+        echo "Current coverage: $COVERAGE%"
+        
+        # Set minimum coverage threshold (70%)
+        THRESHOLD=70
+        
+        if (( $(echo "$COVERAGE < $THRESHOLD" | bc -l) )); then
+          echo "❌ Coverage $COVERAGE% is below threshold $THRESHOLD%"
+          exit 1
+        else
+          echo "✅ Coverage $COVERAGE% meets threshold $THRESHOLD%"
+        fi
