ci: Use dotnet tool run for coverage report generation

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -51,7 +51,7 @@ jobs:
       
     - name: Generate coverage report
       run: |
-        ~/.dotnet/tools/reportgenerator \
+        dotnet tool run reportgenerator \
           -reports:"./TestResults/**/coverage.cobertura.xml" \
           -targetdir:"./coveragereport" \
           -reporttypes:"Html;Badges;TextSummary;JsonSummary"
