--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write  # Cần permission này để comment trên PR
     
     steps:
     - name: Checkout code
@@ -28,7 +31,6 @@ jobs:
         dotnet-version: '8.0.x'
         cache: true
         cache-dependency-path: '**/*.csproj'
-        # cache: true sẽ tự động cache nuget nếu dùng setup-dotnet@v4
         
     - name: Restore dependencies
       run: dotnet restore BlindTreasure.API.sln
@@ -54,27 +56,26 @@ jobs:
         dotnet tool run reportgenerator \
           -reports:"./TestResults/**/coverage.cobertura.xml" \
           -targetdir:"./coveragereport" \
-          -reporttypes:"Html;Badges;TextSummary;JsonSummary"
+          -reporttypes:"Html;Badges;TextSummary;JsonSummary;MarkdownSummaryGithub"
       
     - name: Display coverage summary
       run: |
-        echo "## Code Coverage Summary" >> $GITHUB_STEP_SUMMARY
+        echo "## 📊 Code Coverage Summary" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
         cat ./coveragereport/Summary.txt >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "📋 [Download detailed HTML report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
       
     - name: Comment coverage on PR
       if: github.event_name == 'pull_request'
       uses: marocchino/sticky-pull-request-comment@v2
+      continue-on-error: true  # Không fail workflow nếu comment lỗi
       with:
         recreate: true
         header: coverage-report
-        message: |
-          ## 📊 Code Coverage Report
-          
-          ```
-          $(cat ./coveragereport/Summary.txt)
-          ```
-          
-          📋 [Detailed HTML Report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) available in artifacts.
+        path: ./coveragereport/SummaryGithub.md
       
     - name: Upload coverage reports
       uses: actions/upload-artifact@v4
@@ -82,6 +83,7 @@ jobs:
       with:
         name: coverage-report
         path: ./coveragereport/**/*
+        retention-days: 30  # Giữ artifacts 30 ngày
         
     - name: Upload test results
       uses: actions/upload-artifact@v4
@@ -89,18 +91,50 @@ jobs:
       with:
         name: test-results
         path: ./TestResults/**/*
+        retention-days: 30
         
-    - name: Check coverage threshold
+    - name: Extract and check coverage
       run: |
-        COVERAGE=$(grep -o 'Line coverage: [0-9]*\.*[0-9]*%' ./coveragereport/Summary.txt | grep -o '[0-9]*\.*[0-9]*')
-        echo "Current coverage: $COVERAGE%"
+        # Extract coverage từ JSON để chính xác hơn
+        COVERAGE=$(cat ./coveragereport/Summary.json | grep -o '"linecoverage": *"[^"]*"' | grep -o '[0-9]*\.*[0-9]*')
+        echo "📈 Current coverage: $COVERAGE%"
+        echo "COVERAGE=$COVERAGE" >> $GITHUB_ENV
         
-        # Set minimum coverage threshold (70%)
+        # Set minimum coverage threshold
         THRESHOLD=70
+        echo "🎯 Minimum threshold: $THRESHOLD%"
         
+        # So sánh coverage
         if (( $(echo "$COVERAGE < $THRESHOLD" | bc -l) )); then
           echo "❌ Coverage $COVERAGE% is below threshold $THRESHOLD%"
+          echo "::error::Code coverage $COVERAGE% is below the required threshold of $THRESHOLD%"
           exit 1
         else
           echo "✅ Coverage $COVERAGE% meets threshold $THRESHOLD%"
         fi
+        
+    - name: Add coverage badge comment (fallback)
+      if: github.event_name == 'pull_request' && failure()
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const coverage = process.env.COVERAGE;
+          const threshold = 70;
+          const color = coverage >= threshold ? 'green' : 'red';
+          
+          const comment = `## 📊 Code Coverage Report
+          
+          ![Coverage](https://img.shields.io/badge/coverage-${coverage}%25-${color})
+          
+          **Current Coverage:** ${coverage}%  
+          **Threshold:** ${threshold}%  
+          **Status:** ${coverage >= threshold ? '✅ Passed' : '❌ Below threshold'}
+          
+          📋 [View detailed report in artifacts](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId})`;
+          
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: comment
+          });
